--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -41,4 +41,4 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: RUN Tests
       run: |
-        pytest -v -s --env {{ github.event.inputs.environment }}
+        pytest -v -s --env ${{ github.event.inputs.environment }}
