--- a/.github/workflows/name-of-the-wf-file.yml
+++ b/.github/workflows/name-of-the-wf-file.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: RUN All Smoke Tests
+name: Name of the WF
 
 on:
   workflow_dispatch:
@@ -25,7 +25,7 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  job_name:
 
     runs-on: ubuntu-latest
 
