--- a/.github/workflows/name-of-the-wf-file.yml
+++ b/.github/workflows/name-of-the-wf-file.yml
@@ -34,6 +34,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: RUN Tests
+    - name: Manual RUN of Tests
+      if: github.event_name == 'workflow_dispatch'
       run: |
         pytest -v -s --env ${{ github.event.inputs.environment }}
+    - name: Scheduled RUN of Tests
+      if: github.event_name == 'schedule'
+      run: |
+        pytest -v -s --env staging
