--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -5,6 +5,14 @@ name: RUN E2E Tests
 
 on:
   workflow_dispatch:
+    inputs:
+      environment:
+        type: choice
+        description: Select the testing environment
+        default: staging
+        options:
+        - production
+        - staging
   schedule:
   - cron: "0 2 * * 1-5"
 
@@ -26,6 +34,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Test with pytest
+    - name: Manual RUN of Tests
+      if: github.event_name == 'workflow_dispatch'
       run: |
-        pytest -v -s 
+        pytest -v -s --env ${{ github.event.inputs.environment }}
+    - name: Scheduled RUN of Tests
+      if: github.event_name == 'schedule'
+      run: |
+        pytest -v -s --env staging 
