--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -22,6 +22,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    env:
+      PASS_1: "${{ secrets.PASS_1 }}"
+      PASS_2: "${{ secrets.PASS_2 }}"
 
     steps:
     - uses: actions/checkout@v3
