--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -12,8 +12,8 @@ on:
         options:
         - production
         - staging
-  schedule:
-  - cron: "0 6 * * 1-5"
+#   schedule:
+#   - cron: "0 6 * * 1-5"
 
 permissions:
   contents: read
@@ -40,7 +40,7 @@ jobs:
       if: github.event_name == 'workflow_dispatch'
       run: |
         pytest -v -s --env ${{ github.event.inputs.environment }}
-    - name: Scheduled RUN of Tests
-      if: github.event_name == 'schedule'
-      run: |
-        pytest -v -s --env staging
+#     - name: Scheduled RUN of Tests
+#       if: github.event_name == 'schedule'
+#       run: |
+#         pytest -v -s --env staging
